Possible compatibility problems with earlier versions marked with '*'.

New function yaz_strerror which is a portable wrapper for
strerror/strerror_r/GetLastMessage.

ZOOM_record_get supports type "xml" in which case OAI MARC is
returned for MARC. If type is "MarcXML" , MARC XML is returned.

yaz_marc_decode supports MARC XML as well. The xml parameter
specifies type. See include/marcdisp.h

Fix creation of lib/yaz-config so it works if srcdir != objdir. Patch
from Kang-Jin Lee.

--- 1.9.2 2002/11/26

yaz_marc_decode uses OAI MARC as XML format for ISO2709 records.

Fix bad race conditions on SIGTERM and terminate gracefully in
frontend server.

Move retrieval (data1) module to Zebra since nobody seems to be
using it.

Add GRS-1 render for ZOOM using same format as yaz-client.

--- 1.9.1 2002/10/05

Added man pages: yaz-client(1), yaz-ztest(8), yaz(7), zoomsh(1).

Fix broken ESpec handling in data1 module.

SGML reader parses comments and makes them part of the data1 tree.

Added several type casts so that YAZ compiles as C++ code.

ZOOM didn't handle PDU encoding failures properly.

Added more Bib-1 diagnostics (approved extensions).

GNU configure: better check for iconv.

More portable use of accept, getpeername. Check for socklen_t. Use
int/size_t if socklen_t is not defined.

--- 1.9 2002/09/06

PQF parser rejects bad queries - including those with extra
characters in them. PQF parser used to silently ignore that.
Cleaner API for PQF added, which allows you to get detailed
error information for bad queries (see yaz/pquery.h).

Fixed bug in ZOOM_record_get for type "database".

Implemented mini iconv library supporting conversions between
UTF-8, UCS4, UCS4LE and ISO-8859-1. Implemented in util/siconv.c.

* Removed XML reader (d1_expat.c). It's part of Zebra instead.

--- 1.8.9 2002/08/20

Fixed ZOOM C record cache so that preferredRecordSyntax and
elementSetName is used to check for already fetched records.

--- 1.8.8 2002/08/02
